--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   font-family: sans-serif;
   padding: 10px;
   text-align: center;
+  justify-items: center;
 }
 
 .seat-grid {
@@ -9,22 +10,45 @@
   grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
   gap: 10px;
   margin-top: 20px;
+  /* grid-template-columns: repeat(10, 40px); */
+
 }
 
 .seat {
-  padding: 15px;
+  /* padding: 15px;
   border-radius: 8px;
   background: #eee;
   cursor: pointer;
   font-weight: bold;
-}
+  background-color: #cfcfcf;
+  border: 1px solid #999;
+  text-align: center;
+  line-height: 40px; */
 
+  /* padding: 15px;
+  border-radius: 8px;
+  font-weight: bold;
+  border: 1px solid #999;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer; */
+
+    width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  background: lightgreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
 .seat.leader {
   background: #ffcc00;
 }
 
 .seat.taken {
   background: #ccc;
+  background-color: #f47c7c;
   cursor: not-allowed;
 }
 
@@ -37,4 +61,76 @@
   border-top: 1px solid #ccc;
   padding: 20px;
   box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+}
+
+/* .seat-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 40px);
+  gap: 8px;
+  margin-top: 20px;
+  text-align: center;
+} */
+
+/* .seat {
+  width: 40px;
+  height: 40px;
+  background-color: #cfcfcf;
+  border: 1px solid #999;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
+  border-radius: 5px;
+} */
+
+.seat.available {
+  background-color: #a0e7a0;
+}
+.seat.booked {
+  background-color: #f47c7c; /* Đỏ */
+  cursor: not-allowed;
+}
+.seat.checkedin {
+  background-color: #b0b0b0; /* Xám */
+  cursor: not-allowed;
+}
+
+.seat.highlighted {
+  background-color: #f9e79f; /* Vàng */
+}
+
+/* .seat.taken {
+  background-color: #f47c7c;
+  cursor: not-allowed;
+} */
+
+/* .popup {
+  margin-top: 20px;
+  background: #fff;
+  padding: 15px;
+  border: 1px solid #ccc;
+} */
+
+
+
+.seat-grid-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+}
+
+.seat-row {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+  min-width: 600px; /* giữ hàng có kích thước giống nhau */
+  justify-content: center;
+}
+
+
+.seat-map {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* căn giữa theo chiều ngang */
+  margin-top: 20px;
 }
