--- a/src/App.css
+++ b/src/App.css
@@ -223,21 +223,27 @@
 }
 
 .seat-grid-container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   gap: 10px;
-  align-items: center;
+  align-items: center; */
+
+  display: inline-block;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-width: 100%;
 }
 
 .seat-row {
   display: flex;
   gap: 8px;
-  flex-wrap: wrap; /* Cho hàng ghế tự co giãn */
+  /* flex-wrap: wrap; Cho hàng ghế tự co giãn */
   justify-content: center;
+  margin-bottom: 10px;
 }
 
 .seat {
-  width: 40px;
+  /* width: 40px;
   height: 40px;
   border-radius: 6px;
   display: flex;
@@ -247,7 +253,20 @@
   font-weight: bold;
   transition: 0.2s ease;
   font-size: 14px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); */
+
+    width: 38px;
+  height: 38px;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 8px;
+  margin: 3px;
+  text-align: center;
+  line-height: 38px;
+  background-color: #4caf50;
+  color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  flex-shrink: 0;
 }
 
 .seat:hover {
